RESOLVED FIXED241608
[WebAuthn] Upgrading a legacy platform credential to a passkey does not delete the legacy credential
https://bugs.webkit.org/show_bug.cgi?id=241608
Summary [WebAuthn] Upgrading a legacy platform credential to a passkey does not delet...
pascoe@apple.com
Reported 2022-06-14 11:43:45 PDT
When registering a passkey the same the user handle as an existing legacy credential, the existing credential is not removed.
Attachments
pascoe@apple.com
Comment 1 2022-06-14 11:43:51 PDT
pascoe@apple.com
Comment 2 2022-06-14 11:47:45 PDT
EWS
Comment 3 2022-06-17 11:57:55 PDT
Committed r295641 (251646@main): <https://commits.webkit.org/251646@main> Reviewed commits have been landed. Closing PR #1515 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.