[WebAuthn] Upgrading a legacy platform credential to a passkey does not delete the legacy credential https://bugs.webkit.org/show_bug.cgi?id=241608 rdar://95059952

Reviewed by Brent Fulgham.

* Source/WebKit/UIProcess/WebAuthentication/Cocoa/LocalAuthenticator.mm:
(WebKit::LocalAuthenticator::deleteDuplicateCredential const):
Query credentials by user handle, regardless of sync status to properly remove
legacy credentials.

Canonical link: https://commits.webkit.org/251646@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295641 268f45cc-cd09-0410-ab3c-d52691b4dbfc